--- a/app/src/main/res/layout/activity_exercicio_form.xml
+++ b/app/src/main/res/layout/activity_exercicio_form.xml
@@ -79,6 +79,7 @@
             android:id="@+id/formCard"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
+            android:layout_marginTop="40dp"
             app:cardBackgroundColor="@color/white"
             app:cardCornerRadius="24dp"
             app:cardElevation="12dp"
