--- a/app/src/main/res/layout/activity_treino_form.xml
+++ b/app/src/main/res/layout/activity_treino_form.xml
@@ -81,6 +81,7 @@
             android:layout_height="wrap_content"
             app:cardCornerRadius="24dp"
             app:cardElevation="12dp"
+            android:layout_marginTop="40dp"
             app:cardBackgroundColor="@color/white"
             app:layout_constraintTop_toBottomOf="@id/headerCard"
             app:layout_constraintStart_toStartOf="parent"
